[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Sprites/MainForest/StartButton_hover.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/MainForest/StartButton_unhover.png" type="Texture" id=2]
[ext_resource path="res://Hud/MenuButtons/StartGameButton.gd" type="Script" id=3]
[ext_resource path="res://Hud/MenuButtons/ContainerTextMenuButton.tscn" type="PackedScene" id=4]

[node name="StartGame" type="TextureButton"]
margin_left = 328.0
margin_top = 53.0
margin_right = 470.0
margin_bottom = 175.0
button_mask = 0
keep_pressed_outside = true
texture_normal = ExtResource( 2 )
texture_focused = ExtResource( 1 )
expand = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContainerText" parent="." instance=ExtResource( 4 )]
margin_right = 9.882
margin_bottom = -28.028

[connection signal="focus_entered" from="." to="." method="_on_StartGame_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_StartGame_focus_exited"]
